[package]
name = "skyregion"
version = "0.1.0"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/cds-astro/cds-skyregion-rust/"
description = """
SkyRegions in Rust.
"""

[dependencies]
# CDS crates
cdshealpix = "0.7"
moc = "0.18"
stc-s = "0.1"
astrometry = { git = "https://github.com/cds-astro/cds-astrometry-rust" }
# External crates
thiserror = "2.0"
# - for stc-s (could be better to reexport nom elemnts in stc-s!)
nom = "7.1.3"
# - only with "rayon" feature
rayon = { version = "1.10", optional = true }
num_cpus = { version = "1.13",  optional = true }


[features]
default =  []
rayon = ["dep:rayon", "dep:num_cpus"]
